# gemini-api-file-search-tool

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
app/: conversation.py  file_search.py  localization.py  pdf_utils.py  state.py  ui.py
app/core/: config.py  exceptions.py  state.py
app/services/: gemini_service.py  pdf_service.py
app/ui/: components.py
app/utils/: conversation.py  localization.py
